# lup

./: .env  .gitignore  LICENSE  PLAN.md  README.md  downstream.json  pyproject.toml
.claude/: CLAUDE.md  PATTERNS.md  settings.json
.claude-plugin/: marketplace.json
.claude/plugins/.claude-plugin/: marketplace.json
.claude/plugins/lup/: TEMPLATE_CLAUDE.md
.claude/plugins/lup/.claude-plugin/: plugin.json
.claude/plugins/lup/agents/: implementer.md  trace-explorer.md  version-explorer.md  version-reviewer.md
.claude/plugins/lup/commands/: add-command.md  brainstorm.md  bump.md  clean-gone.md  close.md  commit.md  create-investigator.md  debug.md  fb-analyze.md  fb-implement.md  fb-investigate.md  fb-reflect.md  fb-status.md  feedback-loop.md  hooks.md  import.md  init.md  install.md  merge-conflict.md  merge.md  meta-principle.md  meta.md  modify-command.md  principle.md  rebase.md  refactor-tools.md  refactor.md  review.md  update-docs.md  update.md
.claude/plugins/lup/hooks/: hooks.json
.claude/plugins/lup/hooks/scripts/: auto_allow_bash.py  auto_allow_edits.py  auto_allow_fetch.py  check_plan_md.py  pre_push_check.py  protect_tests.py
.claude/plugins/lup/scripts/: aggregate_metrics.py  commit_results.py  feedback_collect.py  inspect_api.py  module_info.py  new_worktree.py  trace_analysis.py  usage.py
.claude/plugins/lup/scripts/claude/: downstream_sync.py  inspect_api.py  module_info.py
.claude/plugins/lup/scripts/loop/: aggregate_metrics.py  feedback_collect.py  trace_analysis.py
src/lup/: __init__.py  version.py
src/lup/agent/: client.py  config.py  core.py  models.py  prompts.py  subagents.py  tool_policy.py
src/lup/agent/tools/: __init__.py  example.py  realtime.py  reflect.py
src/lup/devtools/: __init__.py  agent.py  api.py  branch.py  bump.py  charts.py  conflict.py  dev.py  feedback.py  git.py  init.py  main.py  metrics.py  pr.py  sync.py  trace.py  usage.py  version.py  worktree.py
src/lup/devtools/dev/: __init__.py  branches.py  conflicts.py  init.py  pr.py
src/lup/devtools/feedback/: __init__.py  analyze.py  state.py
src/lup/devtools/git/: __init__.py  branches.py
src/lup/devtools/session/: __init__.py  state.py  traces.py
src/lup/devtools/trace/: __init__.py  traces.py
src/lup/environment/: __init__.py
src/lup/environment/cli/: __init__.py  __main__.py
src/lup/lib/: __init__.py  background.py  cache.py  client.py  history.py  hooks.py  images.py  mcp.py  metrics.py  notes.py  paths.py  realtime.py  reflect.py  responses.py  retry.py  sandbox.py  scoring.py  throttle.py  trace.py
src/lup_template/: __init__.py
src/lup_template/agent/: __init__.py  config.py  core.py  models.py  prompts.py  subagents.py  tool_policy.py
src/lup_template/agent/tools/: __init__.py  example.py  realtime.py  reflect.py
src/lup_template/devtools/: __init__.py  agent.py  api.py  main.py  sync.py  usage.py  version.py
src/lup_template/devtools/dev/: __init__.py  branches.py  check.py  conflicts.py  init.py  pr.py  worktree.py
src/lup_template/devtools/feedback/: __init__.py  analyze.py  state.py
src/lup_template/devtools/trace/: __init__.py  traces.py
src/lup_template/environment/cli/: __main__.py
tests/: conftest.py
tests/integration/: test_sandbox_repl.py
tests/unit/: test_models.py  test_throttle.py  test_tool_policy.py
