[project]
name = "lup-template"
version = "0.1.0"
description = "Self-improving agent template with feedback loop, built with the Claude Agent SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.26",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.3.1",
    "sh>=2.2.2",
    "tenacity>=9.0.0",
    "typer>=0.21.1",
]

[project.scripts]
lup = "lup.environment.cli.__main__:app"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
