[project]
name = "lup-template"
version = "0.1.0"
description = "Self-improving agent template with feedback loop, built with the Claude Agent SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "Joy Void Joy", email = "joy.void.joy@gmail.com" }]
keywords = [
    "agent",
    "ai",
    "claude",
    "feedback-loop",
    "llm",
    "self-improving",
    "template",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "lup[docker]",
    "plotext>=5.3.2",
    "prompt-toolkit>=3.0.52",
    "pydantic-settings>=2.12.0",
    "sh>=2.2.2",
    "typer>=0.21.1",
]

[project.scripts]
lup = "lup_template.environment.cli.__main__:app"
lup-devtools = "lup_template.devtools.main:app"

[project.urls]
Homepage = "https://github.com/joy-void-joy/lup"
Repository = "https://github.com/joy-void-joy/lup"
Issues = "https://github.com/joy-void-joy/lup/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.lup]
agent_version = "0.1.0"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
lup = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "packages/lup/src"]
markers = ["integration: tests requiring external services (Docker, APIs)"]

[tool.pyright]
include = ["src", "packages/lup/src", "tests"]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
